<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/team_logo"
                android:layout_width="32dp"
                android:layout_height="32dp" />

            <com.teambrella.android.ui.widget.AkkuratBoldTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/bottom_navigation_team"
                android:textColor="@android:color/white"
                android:textSize="17sp" />


        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:layout_scrollFlags="enterAlways"
        app:tabBackground="@color/colorPrimary"
        app:tabIndicatorColor="#35abd9"
        app:tabIndicatorHeight="4dp"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextAppearance="@style/Teambrella.TextAppearence.Tab"
        app:tabTextColor="@color/lightPeriwinkle">

        <android.support.design.widget.TabItem android:text="@string/team_feed" />

        <android.support.design.widget.TabItem android:text="@string/team_members" />

        <android.support.design.widget.TabItem android:text="@string/team_claims" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</LinearLayout>