<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="20dp">


    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        android:id="@+id/header"
        style="@style/Teambrella.Teammate.Section.TextAppearence.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voting_stats" />

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:divider="@drawable/vertical_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dividerPadding="1dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.teambrella.android.ui.widget.AkkuratBoldTextView
                style="@style/Teambrella.Teammate.Section.TextAppearence.Info"
                android:text="@string/weight" />

            <com.teambrella.android.ui.widget.AkkuratBoldTextView
                android:id="@+id/weight"
                style="@style/Teambrella.Teammate.HeaderView.TextAppearence.CoverValue" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.teambrella.android.ui.widget.AkkuratBoldTextView
                style="@style/Teambrella.Teammate.Section.TextAppearence.Info"
                android:text="@string/proxy_rank" />

            <com.teambrella.android.ui.widget.AkkuratBoldTextView
                android:id="@+id/proxy_rank"
                style="@style/Teambrella.Teammate.HeaderView.TextAppearence.CoverValue" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/horizontal_divider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.teambrella.android.ui.widget.AkkuratRegularTextView
            style="@style/Teambrella.Teammate.Section.TextAppearence.Normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/decisions" />

        <com.teambrella.android.ui.widget.PercentageWidget
            android:id="@+id/decision_stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:percentageDrawable="@drawable/decisions_progress_drawable" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.teambrella.android.ui.widget.AkkuratRegularTextView
            style="@style/Teambrella.Teammate.Section.TextAppearence.Normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/discussions" />

        <com.teambrella.android.ui.widget.PercentageWidget
            android:id="@+id/discussion_stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:percentageDrawable="@drawable/discussions_progress_drawable" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.teambrella.android.ui.widget.AkkuratRegularTextView
            style="@style/Teambrella.Teammate.Section.TextAppearence.Normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/voting_frequency" />

        <com.teambrella.android.ui.widget.PercentageWidget
            android:id="@+id/voting_stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:percentageDrawable="@drawable/voting_frequency_progress_drawable" />

    </LinearLayout>

    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        android:id="@+id/add_to_proxies"
        style="@style/Teambrella.TextAppearence.SectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_to_my_proxies" />

</LinearLayout>