<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/block">

    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        android:id="@+id/header"
        style="@style/Teambrella.Teammate.Section.TextAppearence.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:text="@string/withdraw_details" />

    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        android:id="@+id/to_address_title"
        style="@style/Teambrella.TextAppearence.InputTitle"
        android:layout_marginTop="24dp"
        android:text="@string/to_address"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <com.teambrella.android.ui.widget.AkkuratRegularEditText
        android:id="@+id/eth_address_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/default_edit_text_background"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:textColor="@color/charcoalGrey"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/to_address_title" />

    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        android:id="@+id/amount_title"
        style="@style/Teambrella.TextAppearence.InputTitle"
        android:layout_marginTop="24dp"
        android:text="@string/withdraw_amount_title"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/eth_address_input" />

    <com.teambrella.android.ui.widget.AkkuratRegularEditText
        android:id="@+id/amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/default_edit_text_background"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:textColor="@color/charcoalGrey"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/amount_title" />


    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        android:id="@+id/submit"
        style="@style/Teambrella.TextAppearence.SectionButton"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/header_button"
        android:text="@string/submit_claim"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_input" />


</android.support.constraint.ConstraintLayout>