<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/section_background"
    android:orientation="vertical">

    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        android:id="@+id/header"
        style="@style/Teambrella.Teammate.Section.TextAppearence.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discussion" />

    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        android:id="@+id/incident_date_title"
        style="@style/Teambrella.TextAppearence.InputTitle"
        android:layout_marginTop="24dp"
        android:text="@string/title" />


    <com.teambrella.android.ui.widget.AkkuratRegularEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/default_edit_text_background"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:textColor="@color/charcoalGrey"
        android:textSize="15sp" />


    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        style="@style/Teambrella.TextAppearence.InputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/post"
        android:windowSoftInputMode="stateUnchanged" />


    <com.teambrella.android.ui.widget.AkkuratRegularEditText
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/default_edit_text_background"
        android:gravity="top|start"
        android:lines="6"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:textColor="@color/charcoalGrey"
        android:textSize="15sp" />

</LinearLayout>